Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ h1 { margin: 10px 0; }
 #bild {
   max-width: 90%;
   max-height: 70vh;
-  margin-top: 10px;
+  margin: 10px auto;
 }
 
 #loesung {
@@ -174,3 +174,4 @@ startModus("leicht");
 
 </body>
 </html>
+
