Update HTML structure and title for the game

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Bilderrätsel</title>
+<title>Was ist das?!</title>
 
 <style>
 body {
@@ -174,4 +174,5 @@ startModus("leicht");
 
 </body>
 </html>
+
 
