Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ button {
 
 <body>
 
-<h1>Bilderrätsel</h1>
+<h1>Was ist das?!</h1>
 
 <div id="topbar">
   <button onclick="startModus('leicht')">Leicht</button>
@@ -174,5 +174,6 @@ startModus("leicht");
 
 </body>
 </html>
+
 
 
