--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ button {
 <h1>Was ist das?!</h1>
 
 <div id="topbar">
-  <button onclick="startModus('leicht')">Leicht</button>
-  <button onclick="startModus('schwer')">Schwer</button>
+//  <button onclick="startModus('leicht')">Leicht</button>
+// <button onclick="startModus('schwer')">Schwer</button>
   <button onclick="startModus('neu')">Neu</button>
   <button onclick="neuMischen()">Neu mischen</button>
   <button onclick="fullscreen()">Fullscreen</button>
@@ -174,6 +174,7 @@ startModus("leicht");
 
 </body>
 </html>
+
 
 
 
